--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -1,29 +1,65 @@
 /* Small devices (landscape phones, 576px and up) */
 @media (max-width: 576px) {
-  .h1 + .nav-list {
-    display: flex;
-    justify-content: space-evenly;
-    font-size: 10px;
-  }
-  .header {
-    display: inline;
-  }
-  .header h1 {
-    text-align: center;
-  }
 }
 
 /* Medium devices (tablets, 768px and up) */
 @media (max-width: 768px) {
-  .container {
-    height: 50vh;
-  }
 }
 
 /* Large devices (desktops, 992px and up) */
 @media (max-width: 992px) {
+  .header {
+    display: flex;
+    flex-direction: column;
+    padding: 5px;
+  }
+  .header > ul {
+    padding: 0;
+    display: none;
+    background-color: #2fa7ce;
+  }
+  .header ul li {
+    display: block;
+    padding: 15px 0px;
+    font-size: 18px;
+    text-align: center;
+  }
+  .header li a {
+    color: white;
+  }
+
+  .heading-and-button #toogle {
+    display: block;
+  }
+  .header .heading-and-button {
+    display: inline-flex;
+    justify-content: space-between;
+  }
 }
 
 /* Extra large devices (large desktops, 1200px and up) */
-@media (max-width: 1200px) {
+@media all and (min-width: 1200px) {
+  .hero-card-section {
+    position: absolute;
+    width: 70%;
+    bottom: -12%;
+    left: 50%;
+    z-index: 999;
+    display: flex;
+    justify-content: space-between;
+    transform: translate(-50%);
+  }
+}
+@media all and (max-width: 1100px) {
+  .hero-card-section {
+    position: absolute;
+    width: 80%;
+    margin: 0 auto;
+    bottom: -12%;
+    left: 50%;
+    z-index: 999;
+    display: flex;
+    justify-content: space-between;
+    transform: translate(-50%);
+  }
 }
