--- a/styles/style.css
+++ b/styles/style.css
@@ -4,6 +4,7 @@
 }
 body {
   box-sizing: border-box;
+  font-family: sans-serif;
 }
 
 /* header css */
@@ -26,19 +27,39 @@ body {
   color: #56c2de;
 }
 
+.heading-and-button #toogle {
+  font-size: x-large;
+  color: #2fa7ce;
+  align-self: center;
+  display: none;
+  margin-right: 10px;
+}
+
+.header .nav-list {
+  padding: 10px;
+  /* transition: ease all 0.5s; */
+}
+
+.trans {
+  transition: ease all 2s;
+  transition-timing-function: ease-out;
+}
 .header ul li {
   display: inline;
   padding: 30px 30px;
   font-size: 22px;
+  list-style: none;
 }
+
 .header ul li:hover {
   background-color: #8366ee;
   background-image: linear-gradient(#56c2de, #194aa8);
-  border-radius: 10px;
-  color: #fff;
+  border-radius: 4px;
 }
-.header ul {
-  padding: 10px;
+
+.header li a {
+  color: black;
+  text-decoration: none;
 }
 
 /* main content css hero section */
@@ -48,4 +69,41 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   height: auto;
+  width: 100%;
+  position: relative;
+}
+
+.hero-card-section {
+  position: absolute;
+  width: 50%;
+  bottom: -12%;
+  left: 50%;
+  z-index: 999;
+  display: flex;
+  justify-content: space-between;
+  transform: translate(-50%);
+}
+.hero-card-section div {
+  width: 170px;
+  height: 137px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  padding: 10px;
+  color: #fff;
+  font-size: medium;
+}
+.hero-card-section div p {
+  padding-top: 10px;
+}
+
+.hero-card-section div:nth-child(1) {
+  background-image: linear-gradient(#edc912, #cc8d08);
+}
+.hero-card-section div:nth-child(2) {
+  background-image: linear-gradient(#eb14de, #2f0df2);
+}
+.hero-card-section div:nth-child(3) {
+  background-image: linear-gradient(#f00f79, #930555);
+}
+.hero-card-section div:nth-child(4) {
+  background-image: linear-gradient(#f626ee, #c108ba);
 }
