--- a/styles/style.css
+++ b/styles/style.css
@@ -6,6 +6,28 @@ body {
   box-sizing: border-box;
   font-family: sans-serif;
 }
+/* common components */
+.read-more-btn {
+  padding: 10px 20px;
+  margin: 10px;
+  background-image: linear-gradient(
+    to right,
+    rgb(255, 153, 0),
+    rgb(255, 0, 64)
+  );
+  width: max-content;
+  color: #fff;
+  border: none;
+}
+h3 {
+  letter-spacing: 1px;
+  margin: 10px;
+  text-transform: capitalize;
+}
+p {
+  letter-spacing: 1px;
+  margin: 10px;
+}
 
 /* header css */
 .container {
@@ -27,7 +49,14 @@ body {
   color: #56c2de;
 }
 
-.heading-and-button #toogle {
+.heading-and-button #toggle-open {
+  font-size: x-large;
+  color: #2fa7ce;
+  align-self: center;
+  display: none;
+  margin-right: 10px;
+}
+.heading-and-button #toggle-close {
   font-size: x-large;
   color: #2fa7ce;
   align-self: center;
@@ -49,34 +78,39 @@ body {
   padding: 30px 30px;
   font-size: 22px;
   list-style: none;
+  color: #917c71;
 }
 
 .header ul li:hover {
-  background-color: #8366ee;
+  background-color: #959497;
   background-image: linear-gradient(#56c2de, #194aa8);
   border-radius: 4px;
 }
 
 .header li a {
-  color: black;
   text-decoration: none;
+  color: #917c71;
 }
-
+.header li:hover a {
+  text-decoration: none;
+  color: white;
+}
 /* main content css hero section */
 .hero-section {
   background-image: url("/images/bgimage.png");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  height: auto;
+  height: 100vh;
   width: 100%;
   position: relative;
 }
 
 .hero-card-section {
   position: absolute;
-  width: 50%;
-  bottom: -12%;
+  width: 880px;
+  margin-bottom: 20px;
+  bottom: -90px;
   left: 50%;
   z-index: 999;
   display: flex;
@@ -85,7 +119,7 @@ body {
 }
 .hero-card-section div {
   width: 170px;
-  height: 137px;
+  /* height: 137px; */
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   padding: 10px;
   color: #fff;
@@ -96,7 +130,7 @@ body {
 }
 
 .hero-card-section div:nth-child(1) {
-  background-image: linear-gradient(#edc912, #cc8d08);
+  background-image: linear-gradient(#cfc314, #b37d0a);
 }
 .hero-card-section div:nth-child(2) {
   background-image: linear-gradient(#eb14de, #2f0df2);
@@ -106,4 +140,116 @@ body {
 }
 .hero-card-section div:nth-child(4) {
   background-image: linear-gradient(#f626ee, #c108ba);
+}
+/* section 2 */
+.section-two {
+  margin: 10px 10px 10px 10px;
+  display: flex;
+  justify-content: space-between;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+.section-two-left {
+  width: 100%;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  padding: 50px 0px 0px 5px;
+}
+.section-two-right {
+  width: 100%;
+  height: auto;
+  background-color: blue;
+}
+.section-two-right img {
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100%;
+  width: 100%;
+}
+/* section 4 */
+.section-4 {
+  width: 100vw;
+  height: 70vh;
+  position: relative;
+}
+.section-4 .img-wrapper {
+  width: 100%;
+  height: 100%;
+  background-image: url("/images/swimming-room.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.section-4 .section-4-content {
+  position: absolute;
+  top: 0;
+  left: 4%;
+  width: 35%;
+  height: inherit;
+  background-color: rgb(185, 34, 42);
+  background-image: linear-gradient(#f32b32ec, #e72472);
+}
+.section-4 .section-4-content div {
+  /* width: 70%;*/
+  height: auto;
+  /* background-color: green; */
+  margin: 25px;
+  color: #fff;
+  padding: 10px;
+}
+.section-4 .section-4-content div h1 {
+  text-transform: capitalize;
+  padding: 10px;
+}
+.section-4 .section-4-content div p {
+  padding: 10px 10px;
+}
+.section-4 .section-4-content div button {
+  padding: 10px 50px;
+  float: right;
+  border: none;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+/* section-5 */
+.section-5 {
+  margin: 20px 10px 10px 100px;
+  padding: 0px 10px;
+  display: flex;
+  justify-content: center;
+}
+.section-5 section:nth-child(1) {
+  /* width: 613px; */
+  width: 50%;
+  height: 400px;
+  background-image: linear-gradient(#fa7c07, #fa9907);
+  margin: 0px 10px;
+  display: flex;
+  justify-content: center;
+  color: #fff;
+}
+
+.section-5 section:nth-child(1) div {
+  padding: 20px;
+}
+.section-5 h3 {
+  margin: 10px 0px;
+}
+.section-5 section:nth-child(1) ul li {
+  list-style: none;
+  line-height: 50px;
+}
+
+.section-5 section:nth-child(2) {
+  width: 50%;
+  height: 400px;
+  background-color: rgb(105, 87, 27);
+  margin: 0px 10px;
+}
+.section-5 section:nth-child(2) img {
+  width: 100%;
+  height: 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
