--- a/styles/style.css
+++ b/styles/style.css
@@ -5,6 +5,7 @@
 body {
   box-sizing: border-box;
   font-family: sans-serif;
+  overflow-x: hidden;
 }
 /* common components */
 .read-more-btn {
@@ -76,7 +77,7 @@ p {
 .header ul li {
   display: inline;
   padding: 30px 30px;
-  font-size: 22px;
+  font-size: 18px;
   list-style: none;
   color: #917c71;
 }
@@ -130,7 +131,7 @@ p {
 }
 
 .hero-card-section div:nth-child(1) {
-  background-image: linear-gradient(#cfc314, #b37d0a);
+  background-image: linear-gradient(#fa7c07, #fa9907);
 }
 .hero-card-section div:nth-child(2) {
   background-image: linear-gradient(#eb14de, #2f0df2);
@@ -146,14 +147,15 @@ p {
   margin: 10px 10px 10px 10px;
   display: flex;
   justify-content: space-between;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  background-color: #f3f3f3;
+  /* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); */
 }
 .section-two-left {
   width: 100%;
   height: auto;
   display: flex;
   flex-direction: column;
-  padding: 50px 0px 0px 5px;
+  padding: 50px 0px 0px 30px;
 }
 .section-two-right {
   width: 100%;
@@ -189,6 +191,7 @@ p {
   height: inherit;
   background-color: rgb(185, 34, 42);
   background-image: linear-gradient(#f32b32ec, #e72472);
+  opacity: 0.8;
 }
 .section-4 .section-4-content div {
   /* width: 70%;*/
@@ -213,8 +216,8 @@ p {
 }
 /* section-5 */
 .section-5 {
-  margin: 20px 10px 10px 100px;
-  padding: 0px 10px;
+  margin: 50px 10px 50px 10px;
+  /* padding: 0px 10px; */
   display: flex;
   justify-content: center;
 }
@@ -243,7 +246,6 @@ p {
 .section-5 section:nth-child(2) {
   width: 50%;
   height: 400px;
-  background-color: rgb(105, 87, 27);
   margin: 0px 10px;
 }
 .section-5 section:nth-child(2) img {
@@ -252,4 +254,104 @@ p {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+}
+/* section 6 */
+.section-6 {
+  margin: 30px 10px 10px 100px;
+  padding: 10px;
+  display: flex;
+  justify-content: space-between;
+}
+.section-6 div {
+  width: 230px;
+  display: flex;
+  flex-direction: column;
+  margin: 50px 10px 10px 10px;
+  background-color: #efedf1;
+  position: relative;
+  border: 2px solid white;
+  padding: 5px 30px;
+  box-shadow: -1px 2px 1px -2px rgb(0 0 0 / 90%);
+  -webkit-box-shadow: -1px 2px 1px -2px rgb(0 0 0 / 90%);
+  -moz-box-shadow: -1px 2px 1px -2px rgb(0 0 0 / 90%);
+}
+.section-6 div img {
+  position: absolute;
+  top: -18%;
+  left: 50%;
+  transform: translate(-50%);
+  border: 3px solid #fff;
+  border-radius: 50px;
+  margin-top: -4px;
+}
+.section-6 div p {
+  margin: 51px 16px 17px 23px;
+}
+.section-6 div h6 {
+  font-size: large;
+  color: rgb(175, 39, 39);
+  margin: 20px 0;
+  text-align: left;
+}
+.section-6 div:nth-child(1) {
+}
+.section-6 div:nth-child(2) {
+}
+.section-6 div:nth-child(3) {
+}
+.section-6 div:nth-child(4) {
+}
+/* section-7 */
+.section-7 {
+  margin: 20px 10px 10px 60px;
+  padding: 10px 10px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.section-7 div:first-child {
+  width: 48%;
+  height: 400px;
+  background-color: rgba(42, 42, 211, 0.74);
+  color: #fff;
+}
+.section-7 div:first-child h4 {
+  font-size: 25px;
+  padding: 90px 60px 0px 50px;
+}
+.social-icons-1 {
+  /* width: 240px; */
+
+  /* margin: 30px 50px 0px 50px; */
+  border: 1px solid red;
+}
+.social-icons-1 ul li {
+  font-size: 18px;
+  /* display: inline; */
+}
+
+.section-7 div:first-child i {
+  padding-left: 50px;
+  padding-top: 20px;
+}
+
+.section-7 > div:nth-child(2) {
+  width: 48%;
+  height: 400px;
+}
+
+/* footer */
+footer {
+  width: 100%;
+  height: 100px;
+  background-color: #f7f7f7;
+  margin-top: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+footer p {
+  font-size: larger;
+  color: #505153;
+  font-size: 14px;
 }
