--- a/styles/payment.css
+++ b/styles/payment.css
@@ -8,6 +8,7 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  background-color: rgba(119, 119, 119, 0.753);
 }
 .main-container {
   height: 100vh;
@@ -17,10 +18,11 @@ body {
 }
 
 .main-section {
-  width: 250px;
-  height: 400px;
-  background-color: orangered;
-  margin-left: 3px;
+  /* width: 250px;
+  height: 450px; */
+  /* background-color: orangered; */
+  background-color: rgb(236, 240, 240);
+  margin-left: 5px;
   border-radius: 20px;
   box-shadow: 1px 6px 16px 0px rgba(0, 0, 0, 0.75);
   -webkit-box-shadow: 1px 6px 16px 0px rgba(0, 0, 0, 0.75);
@@ -37,13 +39,107 @@ body {
   border-bottom: 3px dashed rgb(56, 53, 53);
   border-top-left-radius: 20px;
   border-top-right-radius: 20px;
+  letter-spacing: 1.8px;
+}
+
+#standerd {
+  background-color: #112b39;
+}
+#basic {
+  background-color: #3f8760;
+}
+#premium {
+  background-color: #b56923;
+}
+
+.price {
+  width: 100%;
+  height: 70px;
+  margin-top: 10px;
+  text-align: center;
+  font-weight: 300;
+  font-size: 25px;
+  color: #949393;
+}
+
+.price small {
+  font-size: 16px;
+  margin-top: 0px;
+}
+.features-div {
+  width: 230px;
+  height: auto;
+  /* border: 1px solid red; */
+  margin: 10px;
+}
+.features-div span {
+  display: flex;
+  justify-content: space-around;
+  color: #515351;
+  font-size: 20px;
+  margin: 20px;
+  background-color: #e7e3e3;
+}
+.features-div .selected-span > small {
+  text-align: justify;
+}
+
+#standerd-div {
+  padding-top: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+#standerd-div > .btn-wrapper {
+  margin-top: 35px;
+}
+#standerd-div > .btn-wrapper > .selected-btn {
+  font-size: 18px;
+  padding: auto 40px;
+  background-color: #112b39;
+}
+/* #standerd-div > .features-div .selected-span i {
+  color: #3e803e;
+} */
+
+#premium-div > .features-div {
+}
+
+#premium-div > .btn-wrapper > .selected-btn {
+  background-color: #b56923;
+}
+
+.features-div .selected-span i {
+  color: #3e803e;
+}
+.features-div .cross-span i {
+  color: red;
+}
+.main-section .btn-wrapper {
+  display: flex;
+  justify-content: center;
+}
+.main-section .btn-wrapper .selected-btn:hover {
+  cursor: pointer;
+}
+.main-section .selected-btn {
+  padding: 10px 40px;
+  font-size: 16px;
+  letter-spacing: 2px;
+  margin-bottom: 20px;
+  border: none;
+  background-color: #3f8760;
+  border-radius: 10px;
+  color: #fff;
 }
 
 .main-container .main-section:nth-child(1) {
 }
+
 .main-container .main-section:nth-child(2) {
-  background-color: orchid;
-  height: 470px;
+  /* background-color: orchid; */
+  height: 510px;
 }
+
 .main-container .main-section:nth-child(3) {
 }
