--- a/styles/style.css
+++ b/styles/style.css
@@ -9,8 +9,9 @@ body {
 }
 /* common components */
 .read-more-btn {
-  padding: 10px 20px;
+  padding: 16px 53px;
   margin: 10px;
+  font-size: 18px;
   background-image: linear-gradient(
     to right,
     rgb(255, 153, 0),
@@ -24,10 +25,12 @@ h3 {
   letter-spacing: 1px;
   margin: 10px;
   text-transform: capitalize;
+  font-size: 24px;
 }
 p {
   letter-spacing: 1px;
   margin: 10px;
+  line-height: 30px;
 }
 
 /* header css */
@@ -109,9 +112,9 @@ p {
 
 .hero-card-section {
   position: absolute;
-  width: 880px;
+  width: 930px;
   margin-bottom: 20px;
-  bottom: -90px;
+  bottom: -160px;
   left: 50%;
   z-index: 999;
   display: flex;
@@ -119,7 +122,7 @@ p {
   transform: translate(-50%);
 }
 .hero-card-section div {
-  width: 170px;
+  width: 200px;
   /* height: 137px; */
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   padding: 10px;
@@ -128,6 +131,7 @@ p {
 }
 .hero-card-section div p {
   padding-top: 10px;
+  line-height: 22px;
 }
 
 .hero-card-section div:nth-child(1) {
@@ -144,10 +148,10 @@ p {
 }
 /* section 2 */
 .section-two {
-  margin: 10px 10px 10px 10px;
+  margin: 200px 10px 10px 10px;
   display: flex;
   justify-content: space-between;
-  background-color: #f3f3f3;
+  background-color: #dfdfdf;
   /* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); */
 }
 .section-two-left {
@@ -156,11 +160,17 @@ p {
   display: flex;
   flex-direction: column;
   padding: 50px 0px 0px 30px;
+  flex: 1;
 }
+.section-two-left div {
+  margin: 50px;
+}
+
 .section-two-right {
   width: 100%;
   height: auto;
   background-color: blue;
+  flex: 1;
 }
 .section-two-right img {
   background-position: center;
@@ -169,6 +179,12 @@ p {
   height: 100%;
   width: 100%;
 }
+
+/* section-3 */
+.section-3 {
+  margin: 10px;
+}
+
 /* section 4 */
 .section-4 {
   width: 100vw;
@@ -207,6 +223,7 @@ p {
 }
 .section-4 .section-4-content div p {
   padding: 10px 10px;
+  line-height: normal;
 }
 .section-4 .section-4-content div button {
   padding: 10px 50px;
@@ -221,26 +238,25 @@ p {
   display: flex;
   justify-content: center;
 }
-.section-5 section:nth-child(1) {
+.section-5 div:nth-child(1) {
   /* width: 613px; */
   width: 50%;
   height: 400px;
   background-image: linear-gradient(#fa7c07, #fa9907);
   margin: 0px 10px;
-  display: flex;
-  justify-content: center;
+
   color: #fff;
 }
 
-.section-5 section:nth-child(1) div {
-  padding: 20px;
-}
 .section-5 h3 {
-  margin: 10px 0px;
+  margin: 30px 0px 10px 0px;
+  text-align: center;
+  font-size: 30px;
 }
-.section-5 section:nth-child(1) ul li {
-  list-style: none;
+.section-5 ul li {
+  text-align: center;
   line-height: 50px;
+  font-size: 18px;
 }
 
 .section-5 section:nth-child(2) {
@@ -260,7 +276,7 @@ p {
   margin: 30px 10px 10px 100px;
   padding: 10px;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
 }
 .section-6 div {
   width: 230px;
@@ -269,11 +285,12 @@ p {
   margin: 50px 10px 10px 10px;
   background-color: #efedf1;
   position: relative;
-  border: 2px solid white;
+  /* border: 2px solid white; */
   padding: 5px 30px;
-  box-shadow: -1px 2px 1px -2px rgb(0 0 0 / 90%);
-  -webkit-box-shadow: -1px 2px 1px -2px rgb(0 0 0 / 90%);
-  -moz-box-shadow: -1px 2px 1px -2px rgb(0 0 0 / 90%);
+  box-shadow: 0px 0px 2px 0px rgb(0 0 0 / 90%);
+
+  -webkit-box-shadow: 0px 0px 2px 0px rgb(0 0 0 / 90%);
+  -moz-box-shadow: 0px 0px 2px 0px rgb(0 0 0 / 90%);
 }
 .section-6 div img {
   position: absolute;
@@ -281,11 +298,14 @@ p {
   left: 50%;
   transform: translate(-50%);
   border: 3px solid #fff;
-  border-radius: 50px;
+  border-radius: 50%;
   margin-top: -4px;
+  overflow: hidden;
 }
 .section-6 div p {
-  margin: 51px 16px 17px 23px;
+  margin: 60px 30px 30px 0px;
+  text-align: left;
+  line-height: normal;
 }
 .section-6 div h6 {
   font-size: large;
@@ -310,14 +330,14 @@ p {
 }
 
 .section-7 div:first-child {
-  width: 48%;
+  width: 50%;
   height: 400px;
-  background-color: rgba(42, 42, 211, 0.74);
+  background-color: #4eaed4;
   color: #fff;
 }
 .section-7 div:first-child h4 {
   font-size: 25px;
-  padding: 90px 60px 0px 50px;
+  padding: 36px 60px 0px 50px;
 }
 .social-icons-1 {
   /* width: 240px; */
@@ -325,18 +345,41 @@ p {
   /* margin: 30px 50px 0px 50px; */
   border: 1px solid red;
 }
-.social-icons-1 ul li {
-  font-size: 18px;
-  /* display: inline; */
+
+.section-7 > div > div {
+  display: flex;
+  font-size: 20px;
+  margin-top: 20px;
+  margin-left: 30px;
 }
 
-.section-7 div:first-child i {
-  padding-left: 50px;
-  padding-top: 20px;
+.section-7 > div:first-child div:last-child {
+  display: flex;
+  padding: 10px 0px 0px 10px;
+}
+.section-7 .social-icon {
+  margin-left: 20px;
+  padding: 10px 20px;
+  margin-top: -15px;
+  background-color: rgba(182, 176, 181, 0.363);
+}
+.section-7 .social-icon img {
+  margin-left: 20px;
+}
+.section-7 > div > div > img {
+  background-color: white;
+  padding: 5px;
+  border-radius: 50%;
+}
+
+.section-7 > div > div > figcaption {
+  letter-spacing: 3px;
+  margin-top: 10px;
+  margin-left: 10px;
 }
 
 .section-7 > div:nth-child(2) {
-  width: 48%;
+  width: 50%;
   height: 400px;
 }
 
@@ -344,7 +387,7 @@ p {
 footer {
   width: 100%;
   height: 100px;
-  background-color: #f7f7f7;
+  background-color: #dfdfdf;
   margin-top: 50px;
   display: flex;
   justify-content: center;
